# test_ci

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  ci.sh  install-cuda.sh  test_cuda.cu  test_mpi.cpp
travis/: .travis.yml  CMakeLists.txt  Makefile  ci.sh  cmake_install.cmake  install-cuda.sh  test_mpi.cpp  test_omp.cpp
